--- a/res/QtGUI.qrc
+++ b/res/QtGUI.qrc
@@ -1,4 +1,9 @@
 <RCC>
-    <qresource prefix="QtGUI">
-    </qresource>
+  <qresource prefix="QtGUI">
+    <file>exit.png</file>
+    <file>settings.png</file>
+    <file>cubes.png</file>
+    <file>vector-diagonal-line-with-box-edges.png</file>
+    <file>molecule.png</file>
+  </qresource>
 </RCC>
