--- a/ui/window.ui
+++ b/ui/window.ui
@@ -278,5 +278,21 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>actionExit</sender>
+   <signal>triggered()</signal>
+   <receiver>Window</receiver>
+   <slot>close()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>115</x>
+     <y>81</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>148</x>
+     <y>173</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
 </ui>
