--- a/ui/window.ui
+++ b/ui/window.ui
@@ -6,12 +6,16 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>291</width>
-    <height>345</height>
+    <width>298</width>
+    <height>347</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Window</string>
+   <string>Modeller</string>
+  </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>../res/cubes.png</normaloff>../res/cubes.png</iconset>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
@@ -23,6 +27,32 @@
       </size>
      </property>
     </widget>
+   </item>
+   <item>
+    <layout class="QGridLayout" name="gridLayout">
+     <item row="0" column="0">
+      <widget class="QPushButton" name="pushButton">
+       <property name="text">
+        <string>Vertex</string>
+       </property>
+       <property name="icon">
+        <iconset>
+         <normaloff>../res/molecule.png</normaloff>../res/molecule.png</iconset>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QPushButton" name="pushButton_2">
+       <property name="text">
+        <string>Edge</string>
+       </property>
+       <property name="icon">
+        <iconset>
+         <normaloff>../res/vector-diagonal-line-with-box-edges.png</normaloff>../res/vector-diagonal-line-with-box-edges.png</iconset>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
@@ -62,7 +92,7 @@
      <item>
       <widget class="QLabel" name="label_2">
        <property name="text">
-        <string>yrot</string>
+        <string>yRot</string>
        </property>
       </widget>
      </item>
@@ -124,8 +154,67 @@
     </layout>
    </item>
   </layout>
+  <widget class="QMenuBar" name="menuBar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>867</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <widget class="QMenu" name="menuFile">
+    <property name="title">
+     <string>File</string>
+    </property>
+    <addaction name="action_ffnen_2"/>
+    <addaction name="actionLaden_2"/>
+    <addaction name="actionSpeichern_2"/>
+   </widget>
+   <widget class="QMenu" name="menuhelp">
+    <property name="title">
+     <string>Help</string>
+    </property>
+    <addaction name="separator"/>
+    <addaction name="actionControls"/>
+    <addaction name="actionSettings"/>
+    <addaction name="actionExit"/>
+   </widget>
+   <addaction name="menuFile"/>
+   <addaction name="menuhelp"/>
+  </widget>
+  <action name="action_ffnen_2">
+   <property name="text">
+    <string>Öffnen</string>
+   </property>
+  </action>
+  <action name="actionLaden_2">
+   <property name="text">
+    <string>Laden</string>
+   </property>
+  </action>
+  <action name="actionSpeichern_2">
+   <property name="text">
+    <string>Speichern</string>
+   </property>
+  </action>
+  <action name="actionControls">
+   <property name="text">
+    <string>Controls</string>
+   </property>
+  </action>
+  <action name="actionSettings">
+   <property name="text">
+    <string>Settings</string>
+   </property>
+  </action>
+  <action name="actionExit">
+   <property name="text">
+    <string>Exit</string>
+   </property>
+  </action>
  </widget>
- <layoutdefault spacing="6" margin="11"/>
+ <layoutdefault spacing="6" margin="50"/>
  <customwidgets>
   <customwidget>
    <class>MyGLWidget</class>
@@ -186,6 +275,22 @@
     <hint type="destinationlabel">
      <x>227</x>
      <y>202</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionExit</sender>
+   <signal>triggered()</signal>
+   <receiver>Window</receiver>
+   <slot>close()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>115</x>
+     <y>81</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>148</x>
+     <y>173</y>
     </hint>
    </hints>
   </connection>
